--- a/All CSS/style.css
+++ b/All CSS/style.css
@@ -105,3 +105,8 @@ h2 {
 .btn:hover {
     background-color: #005f5f;
 }
+.innerform label {
+    display: flex;
+    font-family: Poppins;
+    align-items: center;
+}
